@startuml PawPal+

enum Priority {
    HIGH
    MEDIUM
    LOW
}

class Owner {
    owner_id: int
    name: String
    email: String
    phone_number: String
    available_time: int
    preferred_tasks: List<String>
    favorite_pets: List<Pet>
    current_pets: List<Pet>
    --
    add_current_pet(pet: Pet): void
    remove_current_pet(pet: Pet): void
    add_favorite_pet(pet: Pet): void
    remove_favorite_pet(pet: Pet): void
    change_email(new_email: String): void
    get_all_tasks(): List<Task>
    filter_tasks(pet_name: String, completed: bool): List<Task>
}

class Pet {
    pet_id: int
    name: String
    owner_id: int
    species: String
    dietary_preferences: List<String>
    tasks: List<Task>
    --
    change_owner(owner_id: int): void
    complete_task(task: Task): Task | None
}

class Task {
    task_id: int
    task_name: String
    is_completed: boolean
    duration: int
    time: int
    priority: Priority
    pet_id: int
    recurrence: String
    due_date: date
    --
    mark_complete(): Task | None
    edit_task(task_name: String, duration: int, time: int, priority: Priority): void
}

class Schedule {
    schedule: List<Task>
    total_time: int
    explanation: String
    --
    generate_schedule(tasks: List<Task>, available_time: int, preferred_tasks: List<String>): Schedule
    _detect_conflicts(): List<String>
    get_tasks(): List<Task>
    get_explanation(): String
}

Owner "1" --o "*" Pet : owns
Owner "1" --o "1" Schedule : has
Pet "1" --o "*" Task : has
Schedule "1" --o "*" Task : contains
Task --> Priority : uses

@enduml
